# DNN_NeuroSim_VDPW

./: README.md
Inference_pytorch/: APot_str.txt  CMakeLists.txt  RenYuan_log.txt  Resnet20_FP_1.txt  Resnet20_FP_2.txt  Resnet20_FP_91.66.txt  Resnet20_FP_91.92.txt  Resnet20_FP_91.93.txt  Resnet20_FP_92.31.txt  Resnet20_FP_92.31_32x32.txt  Resnet20_FP_92.54.txt  Resnet20_FP_92.54_32x32.txt  Resnet20_WAGE.txt  Resnet20_WAGE_2.txt  Resnet20_model_best.pth.tar  Resnet20_str.txt  generate_layer_record.py  inference.py  neurosim_d3_e4_w2.txt  open_pth.py  train.py
Inference_pytorch/AttachedFiles/: DSCnet.py  NetWork_DSCnet.csv  inference.py  train.py
Inference_pytorch/NeuroSIM/: .depend  Chip.cpp  NetWork-Cifar10-Resnet18.csv  NetWork_DSCnet.csv  NetWork_DSnet.csv  NetWork_DSnet_12layers.csv  NetWork_DSnet_12layers_128.csv  NetWork_DSnet_v1.csv  NetWork_FuseNet.csv  NetWork_MobileNetV1_ori.csv  NetWork_MobileNetV1_v1.csv  NetWork_MobileNetV1_v2.csv  NetWork_ResNet20.csv  NetWork_dsnet_7layers_1024_noconv3.csv  Network_MobileNetV1.csv  Param.cpp  ProcessingUnit.cpp  Tile.cpp  main
Inference_pytorch/log/: 2_bit_Resnet20_model_best.pth.tar  Resnet20_91.66.pth.tar  Resnet20_91.92.tar  Resnet20_91.93.pth.tar  Resnet20_92.31.pth.tar  Resnet20_92.54.pth.tar
Inference_pytorch/model_str/: DSnet_str1.txt  FC_mbv1.txt
Inference_pytorch/models/: ConvDW.py  DSCnet.py  DSnet.py  FuseNet.py  ResNet.py  V1_DSnet.py  mobilenetv1.py  mobilenetv2.py  resnet20_official_modified.py
Inference_pytorch/modules/: floatrange_cpu_np_infer.py
Inference_pytorch/neurosim_output_log/: layer7_16_kernel3.txt  layer7_32_kernel3.txt  layer7_repvgg_512.txt  layers7_512_kernel3.txt
Inference_pytorch/pretrained_models/: DSC_1dw.pth  DSC_2dw.pth  DSC_5dw.pth  DSC_7dw.pth  DSC_8dw.pth
