cmake_minimum_required(VERSION 3.23)
project(Inference_pytorch)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(NeuroSIM)

add_executable(Inference_pytorch
        NeuroSIM/Adder.cpp
        NeuroSIM/Adder.h
        NeuroSIM/AdderTree.cpp
        NeuroSIM/AdderTree.h
        NeuroSIM/BitShifter.cpp
        NeuroSIM/BitShifter.h
        NeuroSIM/Buffer.cpp
        NeuroSIM/Buffer.h
        NeuroSIM/Bus.cpp
        NeuroSIM/Bus.h
        NeuroSIM/Chip.cpp
        NeuroSIM/Chip.h
        NeuroSIM/Comparator.cpp
        NeuroSIM/Comparator.h
        NeuroSIM/constant.h
        NeuroSIM/CurrentSenseAmp.cpp
        NeuroSIM/CurrentSenseAmp.h
        NeuroSIM/DecoderDriver.cpp
        NeuroSIM/DecoderDriver.h
        NeuroSIM/Definition.h
        NeuroSIM/DeMux.cpp
        NeuroSIM/DeMux.h
        NeuroSIM/DFF.cpp
        NeuroSIM/DFF.h
        NeuroSIM/formula.cpp
        NeuroSIM/formula.h
        NeuroSIM/FunctionUnit.cpp
        NeuroSIM/FunctionUnit.h
        NeuroSIM/HTree.cpp
        NeuroSIM/HTree.h
        NeuroSIM/InputParameter.h
        NeuroSIM/LevelShifter.cpp
        NeuroSIM/LevelShifter.h
        NeuroSIM/main.cpp
        NeuroSIM/MaxPooling.cpp
        NeuroSIM/MaxPooling.h
        NeuroSIM/MemCell.h
        NeuroSIM/MultilevelSAEncoder.cpp
        NeuroSIM/MultilevelSAEncoder.h
        NeuroSIM/MultilevelSenseAmp.cpp
        NeuroSIM/MultilevelSenseAmp.h
        NeuroSIM/Mux.cpp
        NeuroSIM/Mux.h
        NeuroSIM/NewMux.cpp
        NeuroSIM/NewMux.h
        NeuroSIM/NewSwitchMatrix.cpp
        NeuroSIM/NewSwitchMatrix.h
        NeuroSIM/Param.cpp
        NeuroSIM/Param.h
        NeuroSIM/Precharger.cpp
        NeuroSIM/Precharger.h
        NeuroSIM/ProcessingUnit.cpp
        NeuroSIM/ProcessingUnit.h
        NeuroSIM/ReadCircuit.cpp
        NeuroSIM/ReadCircuit.h
        NeuroSIM/RowDecoder.cpp
        NeuroSIM/RowDecoder.h
        NeuroSIM/SarADC.cpp
        NeuroSIM/SarADC.h
        NeuroSIM/SenseAmp.cpp
        NeuroSIM/SenseAmp.h
        NeuroSIM/ShiftAdd.cpp
        NeuroSIM/ShiftAdd.h
        NeuroSIM/Sigmoid.cpp
        NeuroSIM/Sigmoid.h
        NeuroSIM/SramNewSA.cpp
        NeuroSIM/SramNewSA.h
        NeuroSIM/SRAMWriteDriver.cpp
        NeuroSIM/SRAMWriteDriver.h
        NeuroSIM/SubArray.cpp
        NeuroSIM/SubArray.h
        NeuroSIM/SwitchMatrix.cpp
        NeuroSIM/SwitchMatrix.h
        NeuroSIM/Technology.cpp
        NeuroSIM/Technology.h
        NeuroSIM/Tile.cpp
        NeuroSIM/Tile.h
        NeuroSIM/typedef.h
        NeuroSIM/VoltageSenseAmp.cpp
        NeuroSIM/VoltageSenseAmp.h
        NeuroSIM/WLDecoderOutput.cpp
        NeuroSIM/WLDecoderOutput.h
        NeuroSIM/WLNewDecoderDriver.cpp
        NeuroSIM/WLNewDecoderDriver.h)
